style/readability change